// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverlayHeaderBar component > Renders correctly with custom heading & icon 1`] = `
<body>
  <div>
    <div
      class="inverted"
    >
      <h2
        class="ui-heading"
        id="a11y-overlay"
        tabindex="-1"
      >
        Test Heading
      </h2>
       
      <span
        class="start"
      >
        <button
          aria-label="Close overlay"
          class="icon-bar-btn actionable base-24 default"
          data-test-id="closeoverlay"
          disabled=""
          title="Close overlay"
        >
          <svg
            aria-hidden="false"
            class="icon large"
            viewBox="0 0 24 24"
          >
            <title>
              Arrow left
            </title>
            <path
              d="M24 10.5H5.78L14 2.02 11.64 0 0 12l11.64 12L14 21.98 5.78 13.5H24v-3z"
            />
          </svg>
           
           
        </button>
      </span>
       
      <span
        class="end"
      />
    </div>
  </div>
</body>
`;

exports[`OverlayHeaderBar component > Renders with defaults 1`] = `
<body>
  <div>
    <div
      class="inverted"
    >
      <h2
        class="ui-heading"
        id="a11y-overlay"
        tabindex="-1"
      >
        Overlay
      </h2>
       
      <span
        class="start"
      >
        <button
          aria-label="Close overlay"
          class="icon-bar-btn actionable base-24 default"
          data-test-id="closeoverlay"
          title="Close overlay"
        >
          <svg
            aria-hidden="false"
            class="icon large"
            viewBox="0 0 24 24"
          >
            <title>
              Remove icon
            </title>
            <path
              d="M1 0l11 11L23 0l1 1-11 11 11 11-1 1-11-11L1 24l-1-1 11-11L0 1z"
            />
          </svg>
           
           
        </button>
      </span>
       
      <span
        class="end"
      />
    </div>
  </div>
</body>
`;
